# Isolate

./: .editorconfig  .gitignore  .npmrc  BUGS.md  CONTRIBUTING.md  MODAL_UNIFICATION_SUMMARY.md  README.md  TODO.md  TODO_REDESIGN.md  TODO_v2.md  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  cleanup-nightly.yml  e2e-hyperv.yml  nightly.yml  release.yml  smoke-test.yml
.kiro/settings/: mcp.json
.kiro/steering/: dpi-testing.md  mcp-tools.md  project-rules.md  subagent-delegation.md
configs/: discord_hosts.txt  ipset_sources.yaml
configs/hostlists/: ai.txt  all.txt  discord.txt  exclude.txt  gaming.txt  general.txt  google.txt  ipset-all.txt  ipset-exclude.txt  meta.txt  streaming.txt  telegram.txt  twitter.txt  youtube.txt
configs/providers/: beeline.yaml  dom_ru.yaml  megafon.yaml  mts.yaml  rostelecom.yaml  ttk.yaml
configs/services/: chatgpt.yaml  discord.yaml  google.yaml  meta.yaml  spotify.yaml  telegram.yaml  twitter.yaml  youtube.yaml
configs/singbox/: vless_template.json
configs/strategies/: ai_multisplit.yaml  discord_fake.yaml  discord_zapret.yaml  gaming_multisplit.yaml  general_alt10.yaml  general_alt11.yaml  general_alt2.yaml  general_alt3.yaml  general_alt4.yaml  general_alt5.yaml  general_alt6.yaml  general_alt7.yaml  general_alt8.yaml  general_alt9.yaml  general_cutoff_n2.yaml  general_cutoff_n3.yaml  general_fake_tls.yaml  general_fake_tls_auto_alt.yaml  general_fake_tls_auto_alt2.yaml  general_fake_tls_auto_alt3.yaml  general_fakedsplit.yaml  general_multisplit.yaml  general_simple_fake.yaml  general_simple_fake_alt.yaml  general_simple_fake_alt2.yaml  meta_multisplit.yaml  streaming_fake.yaml  streaming_multisplit.yaml  telegram_fake.yaml  telegram_multisplit.yaml  twitter_multisplit.yaml  universal_zapret.yaml  vless_proxy.yaml  youtube_google.yaml  youtube_split.yaml  youtube_zapret.yaml  zapret_strategies.json
docs/: ARCHITECTURE.md  BACKEND_COMMANDS.md  CODE_TODOS.md  E2E_TESTING.md  FEATURES.md  FUNCTIONALITY_AUDIT.md  PLUGIN_ARCHITECTURE.md  PLUGIN_SYSTEM_DECISION.md  PROMPT.md  README.md  REFERENCES.md  RELEASE.md  ROADMAP.md  TECHNICAL.md  TODO-REDESIGN.md  TODO_REDESIGN.md  TODO_UX_FEATURES.md
docs/architecture/: async-sqlite-proposal.md  clipboard-import.md  e2e-tests.md  frontend-tests.md  hotkeys.md  parallel-proxy-test.md  release-infrastructure.md  subscription-url.md
docs/audit/: backend-api-audit.md  backend-core-audit.md  configs-audit.md  frontend-core-audit.md  frontend-ui-audit.md  infrastructure-audit.md  zapret-features-comparison.md  zapret-hostlists-comparison.md
plugins/: README.md
plugins/discord-checker/: plugin.json
plugins/discord-voice-checker/: plugin.json
plugins/dns-benchmark/: plugin.json
plugins/instagram-checker/: plugin.json
plugins/latency-monitor/: plugin.json
plugins/speed-test-widget/: plugin.json
plugins/speed-widget/: plugin.json
plugins/steam-checker/: plugin.json
plugins/telegram-checker/: plugin.json
plugins/twitter-checker/: plugin.json
plugins/youtube-checker/: plugin.json
scripts/: dev-admin.ps1  download-binaries.ps1  lint-runes.cjs
src/: app.css  app.d.ts  app.html  hooks.client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: benchmarks.rs  scoring.rs  strategy_engine.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: ab_testing.rs  ai_pilot.rs  automation.rs  composition.rs  dashboard.rs  diagnostics.rs  dns.rs  failover.rs  health_history.rs  hostlists.rs  hosts.rs  ipset.rs  library.rs  logs.rs  metrics.rs  mod.rs  monitor.rs  network.rs  plugin_hostlists.rs  plugins.rs  prewarming.rs  providers.rs  proxies.rs  proxy_chain.rs  quic.rs  rate_limiter.rs  resources.rs  routing.rs  scripts.rs  services.rs  settings.rs  speedtest.rs  state_guard.rs  strategies.rs  system.rs  tcp_timestamps.rs  testing.rs  tray.rs  troubleshoot.rs  tun.rs  (+3 more)
src-tauri/src/core/: ab_testing.rs  app_routing.rs  auto_failover.rs  auto_restart.rs  autorun.rs  binaries.rs  blocked_strategies.rs  checker.rs  config.rs  config_updater.rs  config_validation.rs  conflict_detector.rs  constants.rs  crypto.rs  diagnostics.rs  dns_manager.rs  domain_routing.rs  dynamic_hostlist.rs  env_info.rs  errors.rs  event_bus.rs  global_runner.rs  hostlist_updater.rs  hostlists.rs  hosts_manager.rs  integrity.rs  ipset_manager.rs  ipset_updater.rs  log_capture.rs  log_rotation.rs  logging.rs  mod.rs  models.rs  monitor.rs  multi_strategy.rs  nodpi_engine.rs  orchestra.rs  orchestrator.rs  paths.rs  process_manager.rs  (+28 more)
src-tauri/src/core/automation/: events.rs  mod.rs  monitor.rs  optimizer.rs
src-tauri/src/core/managers/: blocked.rs  cache.rs  history.rs  locked.rs  mod.rs
src-tauri/src/core/models/: config.rs  diagnostic.rs  mod.rs  proxy.rs  service.rs  strategy.rs  subscription.rs
src-tauri/src/core/storage/: database.rs  health_history.rs  migrations.rs  mod.rs  queries.rs  routing.rs  types.rs
src-tauri/src/core/testing/: endpoints.rs  mod.rs  prober.rs  scorer.rs
src-tauri/src/plugins/: checker.rs  hostlist_registry.rs  integration_tests.rs  js_loader.rs  lua_runtime.rs  manifest.rs  mod.rs  script_executor.rs  strategy_registry.rs
src-tauri/src/services/: checker.rs  mod.rs  registry.rs
src/lib/: api.ts  stores.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
tests/e2e/: app.spec.ts  command-palette.spec.ts  keyboard-shortcuts.spec.ts  navigation-flow.spec.ts  plugins.spec.ts  proxies.spec.ts  routing.spec.ts  services.spec.ts  settings.spec.ts  strategies.spec.ts  ui-elements.spec.ts
tests/e2e-tauri/: smoke.spec.ts  tsconfig.json
(+369 files in other folders)
