[package]
name = "isolate"
version = "0.1.0"
description = "Automatic DPI bypass tool"
authors = ["Isolate Team"]
edition = "2021"

[lib]
name = "isolate_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json", "socks", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-util = "0.7"
dirs = "5"
futures = "0.3.31"
sha2 = "0.10"
zip = "2.1"
tauri-plugin-updater = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
url = "2"
chrono = { version = "0.4.42", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
tauri-plugin-mcp-bridge = "0.4"
rand = "0.9"
async-trait = "0.1"

# WASM Plugin System
wasmtime = "27"
wasmtime-wasi = "27"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_Console", "Win32_Networking_WinInet"] }
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
