[package]
name = "isolate"
version = "0.1.0"
description = "Automatic DPI bypass tool"
authors = ["Isolate Team"]
edition = "2021"

[lib]
name = "isolate_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.13", features = ["json", "socks", "stream"] }
rusqlite = { version = "0.38", features = ["bundled"] }
tokio-util = "0.7"
dirs = "6"
futures = "0.3.31"
sha2 = "0.10"
zip = "4.6"
tauri-plugin-updater = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
url = "2"
chrono = { version = "0.4.42", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
tauri-plugin-mcp-bridge = "0.7"
rand = "0.9"
async-trait = "0.1"
regex = "1"
window-vibrancy = "0.7"

# Crash Reporting (opt-in)
sentry = { version = "0.46", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }

# WASM Plugin System
wasmtime = "40"
wasmtime-wasi = "40"

# Lua Runtime for Level 3 Script Plugins
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "serialize"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_JobObjects",
    "Win32_System_ProcessStatus",
    "Win32_Networking_WinInet"
] }
winreg = "0.55"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

# Fast release build for development/testing
[profile.release-dev]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2
strip = false
incremental = true

# Full optimized release for distribution
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Speed up dev builds
[profile.dev]
opt-level = 0
incremental = true

[profile.dev.package."*"]
opt-level = 2
